Improved site styling

--- a/fe/src/app.css
+++ b/fe/src/app.css
@@ -3,65 +3,23 @@
 @import 'tailwindcss/utilities';
 
 body {
-	background-image: repeating-linear-gradient(
-			180deg,
-			#ffe6e6 0px,
-			#ffe6e6 1px,
-			#e6e6e6 1px,
-			#e6e6e6 2px,
-			#f2f2f2 2px,
-			#f2f2f2 3px,
-			transparent 3px,
-			transparent 32px,
-			#cccccc 33px,
-			#cccccc 35px,
-			#e6e6e6 35px,
-			#e6e6e6 36px,
-			#f2f2f2 36px,
-			#f2f2f2 37px,
-			transparent 37px,
-			transparent 64px
-		),
-		repeating-linear-gradient(
-			90deg,
-			transparent 0px,
-			transparent 6px,
-			#ffe6e6 6px,
-			#ffe6e6 7px,
-			#e6e6e6 7px,
-			#e6e6e6 8px,
-			#f2f2f2 8px,
-			#f2f2f2 9px,
-			transparent 9px,
-			transparent 32px,
-			#cccccc 32px,
-			#cccccc 34px,
-			#e6e6e6 34px,
-			#e6e6e6 35px,
-			#f2f2f2 35px,
-			#f2f2f2 36px,
-			#cccccc 36px,
-			#cccccc 38px,
-			#e6e6e6 38px,
-			#e6e6e6 39px,
-			#f2f2f2 39px,
-			#f2f2f2 40px,
-			#cccccc 40px,
-			#cccccc 42px,
-			#e6e6e6 42px,
-			#e6e6e6 43px,
-			#f2f2f2 43px,
-			#f2f2f2 44px,
-			#cccccc 44px,
-			#cccccc 46px,
-			#e6e6e6 46px,
-			#e6e6e6 47px,
-			#f2f2f2 47px,
-			#f2f2f2 48px,
-			transparent 48px,
-			transparent 64px
-		),
-		repeating-linear-gradient(90deg, #e6e6e6, #e6e6e6 1px, #d9d9d9 1px, #d9d9d9 2px);
+	background: linear-gradient(-90deg, rgba(0, 0, 0, 0.05) 1px, transparent 1px),
+		linear-gradient(rgba(0, 0, 0, 0.05) 1px, transparent 1px),
+		linear-gradient(-90deg, rgba(0, 0, 0, 0.04) 1px, transparent 1px),
+		linear-gradient(rgba(0, 0, 0, 0.04) 1px, transparent 1px),
+		linear-gradient(transparent 3px, #f2f2f2 3px, #f2f2f2 78px, transparent 78px),
+		linear-gradient(-90deg, #80ccff 1px, transparent 1px),
+		linear-gradient(-90deg, transparent 3px, #f2f2f2 3px, #f2f2f2 78px, transparent 78px),
+		linear-gradient(#80ccff 1px, transparent 1px), #f2f2f2;
+	background-size:
+		4px 4px,
+		4px 4px,
+		80px 80px,
+		80px 80px,
+		80px 80px,
+		80px 80px,
+		80px 80px,
+		80px 80px;
 }
 
 @layer base {
